Part 2/Exercise 2.08/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 2345
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-svc
                port:
                  number: 80
